# telegram_bot

./: Dockerfile  pyproject.toml
telegram_bot/: main.py
